📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -14790,5 +14790,117 @@
         "published": "Mon, 15 Dec 2025 19:30:22 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46279241\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/nvidia-bulks-up-open-source-offerings-with-an-acquisition-and-new-open-ai-models/",
+        "title": "Nvidia\u00a0bulks up\u00a0open source\u00a0offerings with an acquisition and new open AI models",
+        "link": "https://techcrunch.com/2025/12/15/nvidia-bulks-up-open-source-offerings-with-an-acquisition-and-new-open-ai-models/",
+        "published": "Mon, 15 Dec 2025 22:00:57 +0000",
+        "source": "TechCrunch",
+        "summary": "Nvidia acquired SchedMD, the lead developer of Slurm, and launched the Nemotron 3 family of open source AI models."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/ford-is-starting-a-battery-storage-business-to-power-data-centers-and-the-grid/",
+        "title": "Ford is starting a battery storage business to power data centers and the grid",
+        "link": "https://techcrunch.com/2025/12/15/ford-is-starting-a-battery-storage-business-to-power-data-centers-and-the-grid/",
+        "published": "Mon, 15 Dec 2025 21:17:45 +0000",
+        "source": "TechCrunch",
+        "summary": "Ford will invest about $2 billion into the new business over the next two years."
+    },
+    {
+        "id": "https://www.theverge.com/reviews/691319/best-switch-2-cases",
+        "title": "I tested 15 cases for the Switch 2 and these are the best",
+        "link": "https://www.theverge.com/reviews/691319/best-switch-2-cases",
+        "published": "2025-12-15T16:50:50-05:00",
+        "source": "The Verge",
+        "summary": "You might find it kind of sad to put your hard-earned Switch 2 into a protective case. To me, it\u2019s freeing. Sure, it can take away from the slick design. But using a case relieves me of the worry that the console will accumulate tons of little scratches, or worse. I\u2019ve tested several types of [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/ford-kills-electric-f-150-lightning-for-hybrid/",
+        "title": "Ford Kills the All-Electric F-150 as It Rethinks Its EV Ambitions",
+        "link": "https://www.wired.com/story/ford-kills-electric-f-150-lightning-for-hybrid/",
+        "published": "Mon, 15 Dec 2025 21:13:57 +0000",
+        "source": "WIRED",
+        "summary": "The move comes as a response to the Trump administration's waning support for electrification and a weakening consumer market."
+    },
+    {
+        "id": "https://arstechnica.com/security/2025/12/microsoft-will-finally-kill-obsolete-cipher-that-has-wreaked-decades-of-havoc/",
+        "title": "Microsoft will finally kill obsolete cipher that has wreaked decades of havoc",
+        "link": "https://arstechnica.com/security/2025/12/microsoft-will-finally-kill-obsolete-cipher-that-has-wreaked-decades-of-havoc/",
+        "published": "Mon, 15 Dec 2025 21:15:55 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The weak RC4 for administrative authentication has been a hacker Holy Grail for decades."
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/ford-ends-f-150-lightning-production-starts-battery-storage-business/",
+        "title": "Ford ends F-150 Lightning production, starts battery storage business",
+        "link": "https://arstechnica.com/cars/2025/12/ford-ends-f-150-lightning-production-starts-battery-storage-business/",
+        "published": "Mon, 15 Dec 2025 21:05:18 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "It looks like battery electric vehicles are out of fashion at the Blue Oval."
+    },
+    {
+        "id": "https://www.engadget.com/the-12-best-last-minute-christmas-gifts-for-2025-that-will-arrive-by-december-24-140037753.html?src=rss",
+        "title": "The 12 best last-minute Christmas gifts for 2025 that will arrive by December 24",
+        "link": "https://www.engadget.com/the-12-best-last-minute-christmas-gifts-for-2025-that-will-arrive-by-december-24-140037753.html?src=rss",
+        "published": "Mon, 15 Dec 2025 21:20:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The holidays are nearly here and if you\u2019re a bit behind on your gift shopping, you\u2019re not alone. The holidays can truly sneak up on you, and this year that\u2019s been more true than ever. Between wrapping things up at work before some well-deserved time off and making sure you have everything you need to host family and friends, it can be hard to find the time to go to a store to pick out presents. And when you do finally get there, you may be met with half-empty shelves. But this is where the in"
+    },
+    {
+        "id": "https://gizmodo.com/lg-tvs-get-unremovable-microsoft-copilot-app-2000699870",
+        "title": "LG TVs Get Unremovable Microsoft Copilot App",
+        "link": "https://gizmodo.com/lg-tvs-get-unremovable-microsoft-copilot-app-2000699870",
+        "published": "Mon, 15 Dec 2025 21:45:48 +0000",
+        "source": "Gizmodo",
+        "summary": "Users are not thrilled."
+    },
+    {
+        "id": "https://gizmodo.com/chinese-spacecraft-got-disturbingly-close-to-smashing-into-a-starlink-satellite-2000699907",
+        "title": "Chinese Spacecraft Got Disturbingly Close to Smashing Into a Starlink Satellite",
+        "link": "https://gizmodo.com/chinese-spacecraft-got-disturbingly-close-to-smashing-into-a-starlink-satellite-2000699907",
+        "published": "Mon, 15 Dec 2025 21:35:30 +0000",
+        "source": "Gizmodo",
+        "summary": "The close call underscores the need for improved coordination between satellite operators, Starlink\u2019s vice president of engineering said."
+    },
+    {
+        "id": "https://gizmodo.com/disney-gaston-beauty-and-the-beast-spinoff-2000699896",
+        "title": "Disney Is Prepping a New Gaston \u2018Beauty and the Beast\u2019 Spinoff",
+        "link": "https://gizmodo.com/disney-gaston-beauty-and-the-beast-spinoff-2000699896",
+        "published": "Mon, 15 Dec 2025 21:20:52 +0000",
+        "source": "Gizmodo",
+        "summary": "Luke Evans portrayed the live-action version of the animated role back in the 2017 film, but this will be a new take on the character."
+    },
+    {
+        "id": "https://mashable.com/gifts/best-gifts-for-men",
+        "title": "60 best gifts for men: Awesome, unique gift ideas for impossible-to-shop-for guys",
+        "link": "https://mashable.com/gifts/best-gifts-for-men",
+        "published": "Mon, 15 Dec 2025 21:39:22 +0000",
+        "source": "Mashable",
+        "summary": "Whether he likes camping, the latest tech, comfy athleisure, or Legos, we've got gift ideas for men he's sure to love."
+    },
+    {
+        "id": "https://mashable.com/article/reddit-top-tells-ai-writing",
+        "title": "Forget the em dash \u2014\u00a0Redditors share 6 giveaways that something was written by AI",
+        "link": "https://mashable.com/article/reddit-top-tells-ai-writing",
+        "published": "Mon, 15 Dec 2025 21:31:14 +0000",
+        "source": "Mashable",
+        "summary": "The em dash \u2014 a favorite of writers everywhere \u2014 has become one of the signature giveaways of AI writing. Reddit users are sharing other common tells."
+    },
+    {
+        "id": "https://nanohub.org/resources/43623/download/Essential_Semiconductor_Physics.pdf",
+        "title": "Essential Semiconductor Physics [pdf]",
+        "link": "https://nanohub.org/resources/43623/download/Essential_Semiconductor_Physics.pdf",
+        "published": "Sat, 13 Dec 2025 18:19:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46256643\">Comments</a>"
+    },
+    {
+        "id": "https://questdb.com/blog/async-profiler-kernel-bug/",
+        "title": "A kernel bug froze my machine: Debugging an async-profiler deadlock",
+        "link": "https://questdb.com/blog/async-profiler-kernel-bug/",
+        "published": "Mon, 15 Dec 2025 20:52:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46280465\">Comments</a>"
     }
 ]
