📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -14902,5 +14902,141 @@
         "published": "Mon, 15 Dec 2025 20:52:35 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46280465\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/i-hate-that-i-love-riversides-ai-driven-rewind-for-podcasters/",
+        "title": "I hate that I love Riverside\u2019s AI-driven \u201cRewind\u201d for podcasters",
+        "link": "https://techcrunch.com/2025/12/15/i-hate-that-i-love-riversides-ai-driven-rewind-for-podcasters/",
+        "published": "Mon, 15 Dec 2025 22:53:12 +0000",
+        "source": "TechCrunch",
+        "summary": "Riverside's year-end review is amusing, but it represents a creative culture that's increasingly entwined with AI."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/disneys-openai-deal-is-exclusive-for-just-one-year-then-its-open-season/",
+        "title": "Disney\u2019s OpenAI deal is exclusive for just one year  \u2014 then it\u2019s open season",
+        "link": "https://techcrunch.com/2025/12/15/disneys-openai-deal-is-exclusive-for-just-one-year-then-its-open-season/",
+        "published": "Mon, 15 Dec 2025 22:17:36 +0000",
+        "source": "TechCrunch",
+        "summary": "After the one year is up, Disney is free to sign similar deals with other AI companies."
+    },
+    {
+        "id": "https://www.theverge.com/tech/844964/how-irobot-invented-the-roomba-and-lost-the-future-of-home-robotics",
+        "title": "How Roomba invented the home robot \u2014 and lost the future",
+        "link": "https://www.theverge.com/tech/844964/how-irobot-invented-the-roomba-and-lost-the-future-of-home-robotics",
+        "published": "2025-12-15T17:46:09-05:00",
+        "source": "The Verge",
+        "summary": "For many, iRobot's Roomba robot vacuum was their first experience with a home robot. When I got my Roomba in 2005, I felt like I was a step closer to my dream of living in a Jetsons-style home where a robot did my chores for me. It was expensive, around $300 for a small black [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/844867/apple-tv-google-cast-android",
+        "title": "Apple TV adds Google Cast streaming, but only on Android",
+        "link": "https://www.theverge.com/news/844867/apple-tv-google-cast-android",
+        "published": "2025-12-15T17:11:46-05:00",
+        "source": "The Verge",
+        "summary": "Now it will be easier for Android users to watch Apple TV content on their TV with the addition of Google Cast support. However, even after this update, Google Cast is only an option on the Android version of Apple TV, not the iOS version. Likewise, the Android version still doesn't support AirPlay. The addition [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/ai/2025/12/merriam-webster-crowns-slop-word-of-the-year-as-ai-content-floods-internet/",
+        "title": "Merriam-Webster crowns \u201cslop\u201d word of the year as AI content floods Internet",
+        "link": "https://arstechnica.com/ai/2025/12/merriam-webster-crowns-slop-word-of-the-year-as-ai-content-floods-internet/",
+        "published": "Mon, 15 Dec 2025 22:41:43 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Dictionary codifies the term that took hold in 2024 for low-quality AI-generated content."
+    },
+    {
+        "id": "https://arstechnica.com/culture/2025/12/stranger-things-s5-trailer-teases-vol-2/",
+        "title": "Stranger Things S5 trailer teases Vol. 2",
+        "link": "https://arstechnica.com/culture/2025/12/stranger-things-s5-trailer-teases-vol-2/",
+        "published": "Mon, 15 Dec 2025 22:14:28 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"Everything we've ever assumed about the Upside Down has been dead wrong.\""
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/ford-is-rebooting-the-f-150-lightning-as-an-erev-with-a-gas-generator-222529768.html?src=rss",
+        "title": "Ford is rebooting the F-150 Lightning as an EREV with a gas generator",
+        "link": "https://www.engadget.com/transportation/evs/ford-is-rebooting-the-f-150-lightning-as-an-erev-with-a-gas-generator-222529768.html?src=rss",
+        "published": "Mon, 15 Dec 2025 22:25:29 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Just last month, Ford seemed to be on the brink of <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/transportation/evs/ford-may-not-resume-production-of-the-f-150-lightning-221903848.html\"><ins>sunsetting</ins></a> the F-150 Lightning. Today, the vehicle manufacturer <a class=\"no-affiliate-link\" href=\"https://www.fromtheroad.ford.com/us/en/articles/2025/next-gen-f-150-lightning-extended-range-electric-vehicle\"><ins>announced</ins></a> plans to reboot the truck as a hybrid. This nex"
+    },
+    {
+        "id": "https://gizmodo.com/trump-is-building-a-u-s-tech-force-of-1000-early-career-workers-2000699779",
+        "title": "Trump Is Building a \u2018U.S. Tech Force\u2019 of 1,000+ Early Career Workers",
+        "link": "https://gizmodo.com/trump-is-building-a-u-s-tech-force-of-1000-early-career-workers-2000699779",
+        "published": "Mon, 15 Dec 2025 23:00:16 +0000",
+        "source": "Gizmodo",
+        "summary": "The program will also hire experienced technologists directly from the private sector"
+    },
+    {
+        "id": "https://gizmodo.com/trumps-vile-post-about-rob-reiner-has-some-republicans-breaking-ranks-2000699979",
+        "title": "Trump\u2019s Vile Post About Rob Reiner Has Some Republicans Breaking Ranks",
+        "link": "https://gizmodo.com/trumps-vile-post-about-rob-reiner-has-some-republicans-breaking-ranks-2000699979",
+        "published": "Mon, 15 Dec 2025 22:53:36 +0000",
+        "source": "Gizmodo",
+        "summary": "President Trump blamed the acclaimed director for his own murder."
+    },
+    {
+        "id": "https://gizmodo.com/valve-has-the-secret-to-playing-your-games-everywhere-and-its-not-streaming-2000699887",
+        "title": "Valve Has the Secret to Playing Your Games Everywhere, and It\u2019s Not Streaming",
+        "link": "https://gizmodo.com/valve-has-the-secret-to-playing-your-games-everywhere-and-its-not-streaming-2000699887",
+        "published": "Mon, 15 Dec 2025 22:24:28 +0000",
+        "source": "Gizmodo",
+        "summary": "Sorry, Game Pass, but Steam may soon bring your games to every platform."
+    },
+    {
+        "id": "https://gizmodo.com/marvel-legends-deadpool-and-wolverine-blade-cassandra-nova-x-23-2000699866",
+        "title": "Hasbro\u2019s New \u2018Deadpool & Wolverine\u2019 Figures Let Cassandra Nova Do That Horrifying Face Thing",
+        "link": "https://gizmodo.com/marvel-legends-deadpool-and-wolverine-blade-cassandra-nova-x-23-2000699866",
+        "published": "Mon, 15 Dec 2025 22:20:07 +0000",
+        "source": "Gizmodo",
+        "summary": "Plus, Wesley Snipe's Blade gets the Marvel Legends action figure he's long deserved."
+    },
+    {
+        "id": "https://mashable.com/article/merriam-webster-word-of-year-2025-slop",
+        "title": "Merriam-Webster names \"slop\" the word of the year, and boy was 2025 sloppy",
+        "link": "https://mashable.com/article/merriam-webster-word-of-year-2025-slop",
+        "published": "Mon, 15 Dec 2025 21:52:11 +0000",
+        "source": "Mashable",
+        "summary": "The word of the year is \"Slop,\" according to the people at Merriam-Webster who decide what words mean."
+    },
+    {
+        "id": "https://www.zdnet.com/article/rayneo-x3-pro-ar-glasses-review/",
+        "title": "I got an early demo of AI smart glasses with Gemini, and they're almost too ambitious",
+        "link": "https://www.zdnet.com/article/rayneo-x3-pro-ar-glasses-review/",
+        "published": "Mon, 15 Dec 2025 22:15:00 GMT",
+        "source": "Latest news",
+        "summary": "The color display and integrated AI make a compelling product, but these glasses have some things to solve before I can recommend them."
+    },
+    {
+        "id": "https://johnlian.net/posts/hdmi-cec/",
+        "title": "Fix HDMI-CEC weirdness with a Raspberry Pi and a $7 cable",
+        "link": "https://johnlian.net/posts/hdmi-cec/",
+        "published": "Mon, 15 Dec 2025 21:37:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46281060\">Comments</a>"
+    },
+    {
+        "id": "https://andrewmccalip.com/space-datacenters",
+        "title": "Economics of Orbital vs. Terrestrial Data Centers",
+        "link": "https://andrewmccalip.com/space-datacenters",
+        "published": "Mon, 15 Dec 2025 21:56:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46281288\">Comments</a>"
+    },
+    {
+        "id": "https://blog.owenlacey.dev/posts/are-you-the-one-is-free-money/",
+        "title": "\u201cAre you the one?\u201d is free money",
+        "link": "https://blog.owenlacey.dev/posts/are-you-the-one-is-free-money/",
+        "published": "Fri, 12 Dec 2025 06:47:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46241500\">Comments</a>"
+    },
+    {
+        "id": "https://arxiv.org/abs/2512.11146",
+        "title": "1/4 of US-Trained Scientists Eventually Leave. Is the US Giving Away Its Edge?",
+        "link": "https://arxiv.org/abs/2512.11146",
+        "published": "Mon, 15 Dec 2025 20:25:18 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46280080\">Comments</a>"
     }
 ]
