📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15038,5 +15038,85 @@
         "published": "Mon, 15 Dec 2025 20:25:18 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46280080\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/vcs-discuss-why-most-consumer-ai-startups-still-lack-staying-power/",
+        "title": "VCs discuss why most consumer AI startups still lack staying power",
+        "link": "https://techcrunch.com/2025/12/15/vcs-discuss-why-most-consumer-ai-startups-still-lack-staying-power/",
+        "published": "Tue, 16 Dec 2025 00:22:07 +0000",
+        "source": "TechCrunch",
+        "summary": "The next consumer tech revolution may require an introduction of a new personal device."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/15/openai-backed-biotech-firm-chai-discovery-raises-130m-series-b-at-1-3b-valuation/",
+        "title": "OpenAI-backed biotech firm Chai Discovery raises $130M Series B at $1.3B valuation",
+        "link": "https://techcrunch.com/2025/12/15/openai-backed-biotech-firm-chai-discovery-raises-130m-series-b-at-1-3b-valuation/",
+        "published": "Mon, 15 Dec 2025 23:41:26 +0000",
+        "source": "TechCrunch",
+        "summary": "Chai is building foundation models for drug discovery, specifically to predict interactions between  molecules so they could be reprogramed for cures."
+    },
+    {
+        "id": "https://www.theverge.com/23037217/best-apple-watch-series-se-ultra",
+        "title": "The best Apple Watch to buy",
+        "link": "https://www.theverge.com/23037217/best-apple-watch-series-se-ultra",
+        "published": "2025-12-15T19:00:00-05:00",
+        "source": "The Verge",
+        "summary": "If you have an iPhone, the Apple Watch is the best smartwatch for you. But there was only one Apple Watch when the smartwatch launched in 2015. A decade later, you\u2019ve got three flavors to choose from: the entry-level Watch SE, the standard Series, and the rugged Ultra. Each appeals to a different demographic and [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/645217/best-apple-airpods-pro",
+        "title": "The best AirPods to buy",
+        "link": "https://www.theverge.com/tech/645217/best-apple-airpods-pro",
+        "published": "2025-12-15T18:47:05-05:00",
+        "source": "The Verge",
+        "summary": "Whether you\u2019re buying your first pair of AirPods or replacing a well-used older pair, it\u2019s easy to understand why so many iPhone owners prefer Apple\u2019s earbuds and headphones over other options. Apple has spent years gradually adding new features that work best \u2014 and sometimes only work at all \u2014 with the company\u2019s own devices. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845071/ftc-uber-lawsuit-21-states-amended-complaint",
+        "title": "21 states and DC join the FTC\u2019s lawsuit against Uber",
+        "link": "https://www.theverge.com/news/845071/ftc-uber-lawsuit-21-states-amended-complaint",
+        "published": "2025-12-15T18:17:29-05:00",
+        "source": "The Verge",
+        "summary": "On Monday, nearly two dozen states, plus the District of Columbia, filed an amended complaint in the FTC's lawsuit against Uber. According to the lawsuit, Uber charged consumers for the Uber One subscription without their consent, billed them before the end of a free trial, and shared misleading claims about how much consumers can save [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/openai-chief-communications-officer-hannah-wong-leaves/",
+        "title": "OpenAI\u2019s Chief Communications Officer Is Leaving the Company",
+        "link": "https://www.wired.com/story/openai-chief-communications-officer-hannah-wong-leaves/",
+        "published": "Tue, 16 Dec 2025 00:10:24 +0000",
+        "source": "WIRED",
+        "summary": "Hannah Wong told staff she is moving on to her \u201cnext chapter.\u201d The company will be running an executive search to find a replacement, according to a memo."
+    },
+    {
+        "id": "https://www.engadget.com/social-media/judge-blocks-louisianas-social-media-age-verification-law-001212758.html?src=rss",
+        "title": "Judge blocks Louisiana's social media age verification law",
+        "link": "https://www.engadget.com/social-media/judge-blocks-louisianas-social-media-age-verification-law-001212758.html?src=rss",
+        "published": "Tue, 16 Dec 2025 00:12:12 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A Louisiana law that would have required social media platforms to verify the ages of their users has <a class=\"link\" href=\"https://netchoice.org/wp-content/uploads/2025/12/Louisiana-MSJ_Granted.pdf\" target=\"_blank\">been blocked</a> by a judge. The law, known as the Secure Online Child Interaction and Age Limitation, was passed in 2023 and required Meta, Reddit, Snap, YouTube Discord and others to implement age verification and parental control features.</p><p>The ruling came just days before"
+    },
+    {
+        "id": "https://www.engadget.com/ai/lg-quietly-added-an-unremovable-microsoft-copilot-app-to-tvs-235923754.html?src=rss",
+        "title": "LG quietly added an unremovable Microsoft Copilot app to TVs",
+        "link": "https://www.engadget.com/ai/lg-quietly-added-an-unremovable-microsoft-copilot-app-to-tvs-235923754.html?src=rss",
+        "published": "Mon, 15 Dec 2025 23:59:23 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Microsoft made a big punt this year with Copilot. The company put its AI chatbot into a <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/computing/laptops/microsofts-copilot-ai-pc-plan-fizzled-but-it-still-served-a-purpose-130000239.html\"><ins>special line of laptops</ins></a> and has also tried to integrate it into other tech products. The latest place you may find Copilot is on your LG smart television, whether you want it or not.</p>\n<p>Several LG smart TV owners have taken to <"
+    },
+    {
+        "id": "https://mashable.com/article/dec-15-filelu-8tb-cloud-storage-premium-plan",
+        "title": "Pay once and get 8TB of private, encrypted cloud storage for life with this deal",
+        "link": "https://mashable.com/article/dec-15-filelu-8tb-cloud-storage-premium-plan",
+        "published": "Mon, 15 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Store 8TB of your data for life for a one-time price with this FileLu Cloud Storage Premium Plan lifetime subscription, on sale now for $649.99 (reg. $1,600)."
+    },
+    {
+        "id": "https://newsletter.squishy.computer/p/natures-many-attempts-to-evolve-a",
+        "title": "Nature's many attempts to evolve a Nostr",
+        "link": "https://newsletter.squishy.computer/p/natures-many-attempts-to-evolve-a",
+        "published": "Wed, 10 Dec 2025 23:54:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46225803\">Comments</a>"
     }
 ]
