📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15190,5 +15190,45 @@
         "published": "Tue, 16 Dec 2025 00:34:35 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46283129\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-16-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 16, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-16-2025",
+        "published": "Tue, 16 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-16-2025",
+        "title": "NYT Strands hints, answers for December 16, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-16-2025",
+        "published": "Tue, 16 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-16-2025",
+        "title": "Wordle today: Answer, hints for December 16, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-16-2025",
+        "published": "Tue, 16 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1640 on December 16 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://www.koi.ai/blog/urban-vpn-browser-extension-ai-conversations-data-collection",
+        "title": "8M Users' AI Conversations Sold for Profit by \"Privacy\" Extensions",
+        "link": "https://www.koi.ai/blog/urban-vpn-browser-extension-ai-conversations-data-collection",
+        "published": "Tue, 16 Dec 2025 03:03:49 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46284266\">Comments</a>"
+    },
+    {
+        "id": "https://rkblog.dev/posts/pc-hardware/pc-on-arm/x86_versus_arm_native_game/",
+        "title": "Native vs. emulation: World of Warcraft game performance on Snapdragon X Elite",
+        "link": "https://rkblog.dev/posts/pc-hardware/pc-on-arm/x86_versus_arm_native_game/",
+        "published": "Mon, 15 Dec 2025 23:47:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46282679\">Comments</a>"
     }
 ]
