📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15230,5 +15230,21 @@
         "published": "Mon, 15 Dec 2025 23:47:37 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46282679\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-16-2025",
+        "title": "Hurdle hints and answers for December 16, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-16-2025",
+        "published": "Tue, 16 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://apple.github.io/ml-sharp/",
+        "title": "Sharp",
+        "link": "https://apple.github.io/ml-sharp/",
+        "published": "Tue, 16 Dec 2025 04:06:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46284658\">Comments</a>"
     }
 ]
