📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15246,5 +15246,21 @@
         "published": "Tue, 16 Dec 2025 04:06:51 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46284658\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/govee-discount-code/",
+        "title": "Govee Discount Codes and Deals: 30% Off",
+        "link": "https://www.wired.com/story/govee-discount-code/",
+        "published": "Tue, 16 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "New to Govee? Get a $5 coupon on your first purchase just for signing up."
+    },
+    {
+        "id": "https://terrytao.wordpress.com/2025/12/08/the-story-of-erdos-problem-126/",
+        "title": "Erd\u0151s Problem #1026",
+        "link": "https://terrytao.wordpress.com/2025/12/08/the-story-of-erdos-problem-126/",
+        "published": "Tue, 16 Dec 2025 04:49:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46284897\">Comments</a>"
     }
 ]
