📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15262,5 +15262,37 @@
         "published": "Tue, 16 Dec 2025 04:49:03 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46284897\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/hoka-coupon-code/",
+        "title": "Hoka Coupon Codes: 10% Off | December 2025",
+        "link": "https://www.wired.com/story/hoka-coupon-code/",
+        "published": "Tue, 16 Dec 2025 06:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Enjoy free expedited shipping or 10% off Hoka discount codes, plus save up to 30% with the best discounts this month."
+    },
+    {
+        "id": "https://www.wired.com/story/hp-coupon-code/",
+        "title": "60% HP Discount Codes & Coupons December 2025",
+        "link": "https://www.wired.com/story/hp-coupon-code/",
+        "published": "Tue, 16 Dec 2025 06:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Save up to 60%, plus an extra 20% with HP promo codes for laptops, printers, PCs, and more tech."
+    },
+    {
+        "id": "https://medium.com/@roman.f/a-linear-time-alternative-to-t-sne-for-dimensionality-reduction-and-fast-visualisation-5cd1a7219d6f",
+        "title": "A linear-time alternative for Dimensionality Reduction and fast visualisation",
+        "link": "https://medium.com/@roman.f/a-linear-time-alternative-to-t-sne-for-dimensionality-reduction-and-fast-visualisation-5cd1a7219d6f",
+        "published": "Tue, 16 Dec 2025 06:47:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46285535\">Comments</a>"
+    },
+    {
+        "id": "https://www.bbc.com/news/articles/ckgz318y8elo",
+        "title": "Children with cancer scammed out of millions fundraised for their treatment",
+        "link": "https://www.bbc.com/news/articles/ckgz318y8elo",
+        "published": "Tue, 16 Dec 2025 06:17:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46285376\">Comments</a>"
     }
 ]
